--- a/appsettings.json
+++ b/appsettings.json
@@ -5,7 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
@@ -109,5 +108,11 @@
     "ExpiryInMinutes": 60
   },
   "AllowedHosts": "*",
-  "SQLDebug": true
+  "SQLDebug": false,
+  "ConnectionStrings": {
+    "CRSCoreConnection": "Server=localhost;Database=CRSCore;Trusted_Connection=True;TrustServerCertificate=True;",
+    "CRSPatientDataConnection": "Server=localhost;Database=CRSPatientData;Trusted_Connection=True;TrustServerCertificate=True;",
+    "CRSConnection": "Server=localhost;Database=CRS;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
+  "ImageVirtualPath": "http:\\\\192.168.50.129:8080\\image"
 }
