feat: add image marker url column in db

--- a/appsettings.json
+++ b/appsettings.json
@@ -107,7 +107,9 @@
     "DefaultConnection": "Server=DESKTOP-DSL3QH8\\MSSQLSERVER01;Database=CRS;User Id=sa;Password=admin;TrustServerCertificate=True;"
   },
   "ImageVirtualPath": "https://192.168.50.129:444/image",
+  "ImageMarkerVirtualPath": "https://192.168.50.129:444/ImageMarker",
   "DicomPdfDirPath": "D:/WebImporter_PACS_Data/DicomPdfStorage",
+  "ImageMarkerDirPath": "D:/WebImporter_PACS_Data/ImageMarkerStorage",
   "IsDevelopment": false,
-  "AllowedOrigins": ["https://localhost:5173"]
+  "AllowedOrigins": ["https://localhost:5174"]
 }
